import "rpc_messages.proto";


//We want to reduce to the bare minimum the stuff we send

message PbLogRecord {
  required bytes Key = 1;
  required bytes Value = 2;
  required PbPhysicalTimeSpec UT = 3;
  optional PbPhysicalTimeSpec DST = 4;
  required int32 SrcReplica = 5;
  required int64 LUT = 6;
  optional PbPhysicalTimeSpec CreationTime = 7;

}